--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
 .App {
-  font-size: calc(10px + 1vmin);
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  gap: 0px;
   margin: 0% 33%;
+  font-size: calc(10px + 1vmin);
+}
+
+h1,
+h2,
+h3 {
+  margin: 5px 0px;
+}
+
+section {
+  margin-left: 50px;
 }
